[package]
name = "remote-stockfish-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.100", features = ["backtrace"] }
async-trait = "0.1.89"
bytes = "1.10.1"
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
uci-beyond = { path = "../uci-beyond" }
